syntax = "proto3";
package kcp;

// PacketType is a one-byte trailer indicating the type of packet.
enum PacketType {
  PacketType_HANDSHAKE = 0;
  PacketType_RAW = 1;
  PacketType_KCP_SMUX = 2;
  PacketType_CLOSE_LINK = 3;
}
